# ds2-inventory-cleaner

./: Compilation Instructions.md  Complation Instructions.md  README.md
item_discard_dll/: CMakeLists.txt  DiscardFunction.cpp  DiscardFunction.h  GameManagerImp.cpp  GameManagerImp.h  Signature.h  dllmain.cpp
item_discard_exe/: CMakeLists.txt  dll_injector.cpp  dll_injector.h  main.cpp
